# PhotoMultitool

./: .gitignore  sync.py
MyAmpyWCX/: CMakeLists.txt  README-x64.txt  plugin.ini
MyAmpyWCX/build-x64/: CMakeCache.txt  Makefile  MyAmpy.wfx64  cmake_install.cmake
MyAmpyWCX/dist-embedded-x64/: MyAmpy.wfx64  MyAmpy.wfx64.put1
MyAmpyWCX/dist-x64/: MyAmpy.wfx64  README.txt  plugin.ini
MyAmpyWCX/resources/: MyAmpy.rc
MyAmpyWCX/src/: AmpyHelper.cpp  AmpyHelper.h  MyAmpy.cpp  MyAmpy.h  SerialMicropythonClient.cpp  SerialMicropythonClient.h
src/: ble_config.py  boot.py  config.json  main.py  settings.json  test_bt.py  test_mic.py  yn_test.py
src/apps/: Camogotchi.py  Flashlight.py  FrzLight.py  LookHere.py  TVOff.py  YnLight.py  canon.py  canon_new.json  clicker.py  clicker_keys.json  freezlight.html  insta360.py  insta_new.json  led.ppm  led_settings.json  led_settings2.json  look_me.json  settings.html  settings.py  tv_off.py
